8006182: cleanup to use java.util.Base64 in java security component, providers, and regression tests
Refactored code to use java.util.Base64 Mime Encoder and Decoder as a replacement for sun.misc.BASE64Encoder and sun.misc.BASE64Decoder

Reviewed-by: vinnie, chegar, sherman